<resources>
    <string name="app_name">Dhis2SMS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="LOGIN">LOGIN</string>
    <string name="loading">Processing ...</string>
    <string name="pick_date">Pick related period here ..</string>
    <string name="send_the_sms_message">Send the SMS Message</string>
    <string name="log_me_out">Logout</string>
    <string name="show_my_profile">Profile</string>
    <string name="synchronize">Synchronize</string>
    <string name="about_us">About Us</string>
    <string name="close">CLOSE</string>
    <string name="hisp_phone_number">+228 22 50 44 42</string>
    <string name="load_datasets">Load DataSets</string>
    <string name="modify_pin_code">Modify Pin Code</string>
    <string name="change_school_selected">Manage School Selection</string>
    <string name="confirm_pin_code">Confirm Pin Code</string>
    <string name="new_pin_code">New Pin Code</string>
    <string name="current_pin_code">Current Pin Code</string>
    <string name="save_pin_code">Save Pin Code</string>
    <string name="cancel">Cancel</string>
    <string name="database">DataBase</string>
    <string name="status">Status</string>
    <string name="pin_code_update">Pin Code Update</string>
    <string name="unlock">UnLock</string>
    <string name="pin_code">Pin Code</string>
    <string name="validate">Validate</string>
    <string name="please_wait_while_synchronizing">Please wait while synchronizing</string>
    <string name="click_to_load_datasets">Click to load DataSets</string>
    <string name="click_to_synchronize">Click to synchronize</string>
    <string name="base_url">Base Url</string>
    <string name="proceed">Proceed</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="hist">Hist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_zone">Choose Gateway</string>
    <string name="change_my_zone">Change my Gateway</string>

    <string name="change_school_text">Set Org</string>
    <string name="set_code_text">Set Code</string>
    <string name="set_school_name_text">Set School Name</string>
    <string name="save_text">Save</string>
    <string name="settings_text">Settings</string>
    <string name="sync_text">Synchronization</string>
    <string name="sync_meta_data_text">Sync metadata</string>
    <string name="sync_config_text">Sync configuration</string>
    <string name="sync_org_unit_text">Sync organisation units(schools)</string>
</resources>
