<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sync"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/synchronize"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/sync_text"
        app:showAsAction="never">
        <menu>

            <item
                android:id="@+id/syncConfig"
                android:title="@string/sync_config_text"
                app:showAsAction="never" />
            <item
                android:id="@+id/syncMetaData"
                android:title="@string/sync_meta_data_text"
                app:showAsAction="never" />

            <item
                android:id="@+id/syncOrganisationUnits"
                android:title="@string/sync_org_unit_text"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/status"
        app:showAsAction="never">
        <menu>

            <item
                android:id="@+id/profileInfos"
                android:title="@string/show_my_profile"
                app:showAsAction="never" />

            <item
                android:id="@+id/aboutUs"
                android:title="@string/about_us"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/settings_text"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/changeZone"
                android:title="@string/change_my_zone"
                app:showAsAction="never" />

            <item
                android:id="@+id/modifyPinCode"
                android:title="@string/modify_pin_code"
                app:showAsAction="never" />

            <item
                android:id="@+id/changeSelectedSchool"
                android:title="@string/change_school_selected"
                app:showAsAction="never" />

            <item
                android:id="@+id/clearDataBase"
                android:title="Clear Database"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/log_me_out"
        app:showAsAction="never" />

</menu>
