<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/mainWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/btnSendSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimaryDark"
            android:drawableTop="@android:drawable/sym_action_email"
            android:gravity="center"
            android:text="@string/send_the_sms_message"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="School Name : "
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/selected_org_unit_display_name_text_view"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/select_org_unit_spinner"
                style="@style/SpinnerwithNoArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/SpinnerwithNoArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:spinnerMode="dialog"
                android:visibility="gone" />

            <EditText
                android:id="@+id/period"
                android:hint="@string/pick_date"
                style="@style/PeriodCustomized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#842d41"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/weekPeriodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="0dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/wYearSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/wWeeksSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/trimestrePeriodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="0dp"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/trimestreAnneeSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/trimestreSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/semestrePeriodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/semestreAnneeSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/semestreSpinner"
                    style="@style/SpinnerwithNoArrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/littleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:orientation="vertical"
                android:scrollbars="vertical" />
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <Button
            android:id="@+id/launchSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/click_to_synchronize"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <Button
            android:id="@+id/launchDataSetSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/click_to_load_datasets"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/syncLoadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            android:background="@color/colorSpinnerGrey"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/please_wait_while_synchronizing"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
